--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     <p>Ogni server che incontrerai è protetto da codici cifrati e trappole. Il primo livello di accesso è stato violato: hai trovato un file binario con un indizio. Decifralo per ottenere la password e procedere.</p>
 
-    <button class="btn btn-start" onclick="window.location.href='enigma1.html'">Inizia il Primo Enigma</button>
+    <button class="btn btn-start" onclick="window.location.href='tuamammasporca.html'">Inizia il Primo Enigma</button>
 
     <p id="audioControl" onclick="toggleAudio()">🎶 Attiva/Disattiva Audio</p>
     <audio id="backgroundAudio" loop>
