--- a/formattata.html
+++ b/formattata.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enigma 4</title>
+    <title>Enigma 3</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -55,7 +55,7 @@
     </div>
 
     <p id="resultEnigma4" class="mt-4"></p>
-    <a href="enigma5.html" id="nextEnigmaLink" class="btn btn-success mt-3" style="display:none;">Prosegui al prossimo enigma</a>
+    <a href="cupratistupra.html.html" id="nextEnigmaLink" class="btn btn-success mt-3" style="display:none;">Prosegui al prossimo enigma</a>
 </section>
 
 <script>
