--- a/cupratistupra.html
+++ b/cupratistupra.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enigma 5</title>
+    <title>Enigma 4</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -39,7 +39,7 @@
     <iframe src="audio.html" style="display: none;"></iframe>
 
 <section class="section">
-    <h3>Enigma 5: The Unknown HTTP Method</h3>
+    <h3>Enigma 4: The Unknown HTTP Method</h3>
     <p>As you continue to monitor the server logs, you come across a suspicious request that uses an unknown HTTP method. The method is neither GET nor POST, but rather something like “PURGE” or “TRACE.” This method seems to bypass the server’s security measures and may unlock access to a hidden resource.</p>
     <p><strong>Description:</strong> Analyze the HTTP methods provided and determine which one can bypass security, granting you access to sensitive data. The correct method will allow you to temporarily view a map of compromised systems.</p>
     
@@ -55,8 +55,8 @@
         <button class="btn btn-choice" onclick="checkAnswer('D')">D) HEAD</button>
     </div>
 
-    <p id="resultEnigma5" class="mt-4"></p>
-    <a href="enigma6.html" id="nextEnigmaLink" class="btn btn-success mt-3" style="display:none;">Proceed to the next enigma</a>
+    <p id="resultEnigma4" class="mt-4"></p>
+    <a href="mannaggiaallaburrata.html" id="nextEnigmaLink" class="btn btn-success mt-3" style="display:none;">Proceed to the next enigma</a>
 </section>
 
 <script>
