--- a/mannaggiaallaburrata.html
+++ b/mannaggiaallaburrata.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enigma 6</title>
+    <title>Enigma 5</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -39,7 +39,7 @@
     <iframe src="audio.html" style="display: none;"></iframe>
 
 <section class="section">
-    <h3>Enigma 6: Las Creencias en la Cookie</h3>
+    <h3>Enigma 5: Las Creencias en la Cookie</h3>
     <p>En los registros del servidor, encuentras una solicitud con una cookie extraña. Su nombre es críptico y contiene un valor misterioso que parece un código cifrado. Este valor de sesión parece ser clave para descubrir los planes del intruso.</p>
     <p><strong>Descripción:</strong> Necesitas descifrar el valor de la cookie usando SHA256 para obtener un mensaje secreto. Este mensaje revela el horario específico en el que el atacante llevará a cabo el ataque.</p>
     
@@ -55,8 +55,8 @@
         <button class="btn btn-choice mt-3" onclick="checkAnswer()">Verificar Respuesta</button>
     </div>
 
-    <p id="resultEnigma6" class="mt-4"></p>
-    <a href="enigma7.html" id="nextEnigmaLink" class="btn btn-success mt-3" style="display:none;">Proceder al próximo enigma</a>
+    <p id="resultEnigma5" class="mt-4"></p>
+    <a href="pippoinfame.html" id="nextEnigmaLink" class="btn btn-success mt-3" style="display:none;">Proceder al próximo enigma</a>
 </section>
 
 <script>
