--- a/pippoinfame.html
+++ b/pippoinfame.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enigma 7</title>
+    <title>Enigma 6</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -39,7 +39,7 @@
     <iframe src="audio.html" style="display: none;"></iframe>
 
 <section class="section">
-    <h3>Enigma 7: La Decodifica dell'Autenticazione HTTP</h3>
+    <h3>Enigma 6: La Decodifica dell'Autenticazione HTTP</h3>
     <p>Hai raggiunto l'ultima fase del sistema. In un'ultima richiesta HTTP, trovi il campo di autenticazione con una stringa codificata in base64. Questo campo contiene un messaggio segreto che rivela informazioni cruciali per fermare l'attacco.</p>
     <p><strong>Descrizione:</strong> Devi decodificare il campo Authorization in base64 per ottenere il messaggio nascosto. Il messaggio ti dirà chi è l'intruso, la sua posizione e il suo piano di attacco.</p>
     
@@ -58,8 +58,8 @@
         <button class="btn btn-choice" onclick="checkAnswer('D')">D) Luca Bianchi, Posizione: Sala Sicurezza, Piano: Attacco alle 7:00 AM</button>
     </div>
 
-    <p id="resultEnigma7" class="mt-4"></p>
-    <a href="conclusione.html" id="nextEnigmaLink" class="btn btn-success mt-3" style="display:none;">Procedi...</a>
+    <p id="resultEnigma6" class="mt-4"></p>
+    <a href="carminedovecazzosei.html" id="nextEnigmaLink" class="btn btn-success mt-3" style="display:none;">Procedi...</a>
 </section>
 
 <script>
