--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <p>Sei stato selezionato per un incarico top secret. Un’entità sconosciuta ha compromesso i nostri server HTTPS. Il tuo obiettivo è decifrare e superare le barriere di sicurezza, recuperare le informazioni e bloccare l’operazione prima che sia troppo tardi.</p>
 
     <!-- Immagine inserita al centro, tra le due frasi -->
-    <img src="https://via.placeholder.com/500x300" alt="Immagine rilevante per la missione" class="intro-image">
+    <img src="https://https://upload.wikimedia.org/wikipedia/it/1/12/FBI_%28serie_televisiva%29.jpeg" alt="Immagine rilevante per la missione" class="intro-image">
     <!-- Sostituisci l'URL sopra con il percorso dell'immagine desiderata -->
 
     <p>Ogni server che incontrerai è protetto da codici cifrati e trappole. Il primo livello di accesso è stato violato: hai trovato un file binario con un indizio. Decifralo per ottenere la password e procedere.</p>
