--- a/formattata.html
+++ b/formattata.html
@@ -66,7 +66,7 @@
         const nextLink = document.getElementById("nextEnigmaLink");
 
         if (answer === correctAnswer) {
-            result.textContent = "Corretto! Hai identificato il vero User-Agent.";
+            result.innerHTML = "Corretto! Hai identificato il vero User-Agent.";
             result.style.color = "lime";
             nextLink.style.display = "inline";
         } else {
