--- a/mannaggiaallaburrata.html
+++ b/mannaggiaallaburrata.html
@@ -72,7 +72,7 @@
             result.style.color = "lime";
             nextLink.style.display = "inline";
         } else {
-            result.textContent = "Incorrecto. ¡Inténtalo de nuevo!";
+            result.innerHTML = "Incorrecto. ¡Inténtalo de nuevo!";
             result.style.color = "red";
         }
     }
